Fixed code issue